--- a/src/components/pages/services/cici-career-link-expert/Hero.astro
+++ b/src/components/pages/services/cici-career-link-expert/Hero.astro
@@ -1,37 +1,10 @@
 ---
-const background = "/pages/services/cici-career-link-expert/hero/background.webp";
-const scrollImage = "/pages/services/cici-career-link-expert/hero/scroll-paper.svg";
-const bgMobile = "/pages/services/cici-career-link-expert/hero/bg-mobile.webp";
+const background = "/pages/services/cici-career-link-expert/hero/background.png";
+const bgMobile = "/pages/services/cici-career-link-expert/hero/bg-mobile.png";
 ---
 
 <section class="relative w-full h-screen bg-cover bg-center bg-no-repeat z-20">
   <img src={bgMobile} alt="Hero background" class="absolute inset-0 w-full h-full object-cover sm:hidden z-0" />
   <img src={background} alt="Hero background" class="absolute inset-0 w-full h-full object-cover hidden sm:block z-0" />
-  <div class="absolute inset-x-0 bottom-0 h-32 bg-linear-to-t from-black/30 to-transparent pointer-events-none z-10"></div>
-
-  <div class="mx-auto max-w-7xl px-6 py-8 md:py-24 flex flex-col items-center md:items-end justify-center min-h-[70vh] relative z-20">
-    <div class="relative w-full max-w-[880px] pt-20 md:pt-20 transform translate-x-0 md:translate-x-16 -mt-24 md:mt-16">
-      <h1 class="absolute top-6 sm:top-10 md:top-12 left-1/2 -translate-x-1/2 z-10 w-full text-center font-mochiy-pop-one text-2xl sm:text-3xl md:text-4xl leading-relaxed text-outline-orange">
-        CICI CAREER
-        <br class="hidden sm:block" />
-        LINK EXPERT
-      </h1>
-
-      <div class="relative w-full">
-        <img src={scrollImage} alt="Scroll Paper" class="block mx-auto w-[90%] sm:w-[80%] h-auto select-none pointer-events-none" />
-
-        <div class="absolute inset-0 flex items-center justify-center px-18 sm:px-10 md:px-16 mx-0 md:mx-40">
-          <div class="text-center bg-white/0">
-            <h2 class="text-[#934935] font-bold text-[9px] max-[360px]:text-[10px] sm:text-base md:text-lg">Build Your Future with Us:</h2>
-            <h3 class="text-[#934935] font-bold text-[9px] max-[360px]:text-[10px] sm:text-base md:text-lg -mt-1">Your Gateway to Career Opportunities in China!</h3>
-            <p class="text-[9px] max-[360px]:text-[9px] sm:text-sm md:text-base text-[#934935] leading-relaxed">
-              At Cici Mandarin, we help you land the right job in China—internships, part-time, or full-time—across various industries. Get detailed listings with job info, company profiles, and city insights. Your dream career starts here!
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <div class="absolute inset-x-0 bottom-0 h-20 shadow-2xl pointer-events-none"></div>
 </section>
