🔥feat: assets and logic for hottest news

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,5 +18,5 @@ import ModalPopUp from "../components/pages/pop-up/ModalPopUp.tsx";
   <WhyUs client:load />
   <SuccesStories client:load />
   <LearnCulture client:load/>
-  <HottestNews />
+  <HottestNews client:load/>
 </Layout>
