--- a/src/components/pages/services/cici-tour-travel-expert/Goals.astro
+++ b/src/components/pages/services/cici-tour-travel-expert/Goals.astro
@@ -3,7 +3,7 @@ const background = "/pages/services/cici-tour-travel-expert/goals/background.web
 const bgMobile = "/pages/services/cici-tour-travel-expert/goals/bg-mobile.png";
 ---
 
-<section class="relative w-full overflow-hidden">
+<section class="relative w-full overflow-hidden -mt-6">
   <picture>
     <source media="(min-width: 640px)" srcset={background} />
     <img src={bgMobile} alt="Roadmap background" class="w-full h-auto block" />
